# MLexer

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  M Functions.gsheet  README.md  STYLE.md  class_test.py  main.py  parse_tree.json  pyproject.toml  query.txt  requirements.txt
queries/: complex_query.txt  custom_func.txt  dataflow_queries.txt  imdb_dataflow.txt  jack_m_test.txt  parameter.txt  simple_query.txt  snowflake_query.txt  table_nested_join.txt  table_nested_join2.txt  table_nested_join3.txt
src/PyM/: DataflowQuerySplitter.py  DataflowVisitor.py  MExpression.py  MVisitor.py  ParserExplorer.py  PowerQueryLexer.g4  PowerQueryLexer.interp  PowerQueryLexer.py  PowerQueryLexer.tokens  PowerQueryParser.g4  PowerQueryParser.interp  PowerQueryParser.py  PowerQueryParser.tokens  PowerQueryParserListener.py  PowerQueryParserVisitor.py  StepNode.py  __init__.py
src/PyM/.antlr/: PowerQueryLexer.interp  PowerQueryLexer.java  PowerQueryParser.interp  PowerQueryParser.java  PowerQueryParserBaseListener.java  PowerQueryParserListener.java
src/PyM/visitors/: MExpressionVisitors.py  TableNestedJoin.py  Visitors.py  _AbstractVisitor.py
tests/: test_classifications.py
