[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "PyM"
version = "0.0.1"
authors = [
  { name="Klaus Jürgen Folz", email="klausjurgenfolz@gmail.com"},
]
description = "PyM is a Python lexer that tokenizes and analyses the Power Query M language, adapted from the ANTLR grammars-v4 repository grammar (https://github.com/antlr/grammars-v4/blob/master/powerquery/PowerQueryLexer.g4)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
"Linkedin" = "https://www.linkedin.com/in/klausjfolz/"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]